# noob-vs-pro-tools

./: .env.example  README.md  pyproject.toml
src/pro_tools/: crew.py  main.py
src/pro_tools/config/: agents.yaml  tasks.yaml
src/pro_tools/models/: article.py  research.py
src/pro_tools/tools/: RedditSearchTool.py  TrelloAddCardCommentTool.py  TrelloBoardCardsTool.py  TrelloGetCardsInListTool.py  TrelloUpdateCardTool.py
src/pro_tools/utils/: trello_utils.py
